# ROS_fullfillment

./: .gitignore  README.md  arduino.ino  move_robot.py  test.py
Gripper_Camera_ws/: howtorun.txt
UI/: control.ui  login_ui.py  main.py  pyqt_ex.py  user_data.json  workspace.py  workspace.ui
cam_ws/: howtoruncam
conveyor/: package.xml
etc/: arduino_stop.ino
fullfillment_ws/src/ff_interface/: CMakeLists.txt  package.xml
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
log/: latest_build
xml/: photo_20241129_114807.xml  photo_20241129_114810.xml  photo_20241129_114817.xml  photo_20241129_114819.xml  photo_20241129_114821.xml  photo_20241129_114823.xml  photo_20241129_120016.xml  photo_20241129_120048.xml  photo_20241129_120215.xml  photo_20241129_120222.xml  photo_20241129_122832.xml  photo_20241129_123140.xml  photo_20241129_123145.xml  photo_20241129_123228.xml  photo_20241129_123230.xml  photo_20241129_123232.xml  photo_20241129_123236.xml  photo_20241129_123237.xml  photo_20241129_123238.xml  photo_20241129_123240.xml  photo_20241129_123242.xml  photo_20241129_123252.xml  photo_20241129_123254.xml  photo_20241129_123304.xml  photo_20241129_123307.xml  photo_20241129_123308.xml  photo_20241129_123311.xml  photo_20241129_133716.xml  photo_20241129_133822.xml  photo_20241129_133858.xml  photo_20241129_133900.xml  photo_20241129_133904.xml  photo_20241129_133909.xml  photo_20241129_133919.xml  photo_20241129_145345.xml  photo_20241129_145346.xml  photo_20241129_145347.xml  photo_20241129_145348.xml  photo_20241129_145349.xml  (+8 more)
(+220 files in other folders)
