<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ff_interface</name>
  <version>0.0.0</version>
  <description>Interface package for ROS2</description>

  <maintainer email="sy3180@gmail.com">rokey</maintainer>
  <license>Apache-2.0</license>

  <!-- 빌드 도구 의존성 -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- 빌드 시 필요한 의존성 -->
  <build_depend>rosidl_typesupport_c</build_depend>
  <build_depend>rosidl_default_generators</build_depend>
  <build_depend>geometry_msgs</build_depend>

  <!-- 실행 시 필요한 의존성 -->
  <exec_depend>rosidl_typesupport_c</exec_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <!-- 테스트 관련 의존성 -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <!-- ROS2 인터페이스 패키지 그룹에 속함 -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>


